# local-motion

./: .gitignore  LICENSE  README.md
app/: .eslintrc.cjs  .prettierignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: constants.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  detectors.rs  error.rs  main.rs  utils.rs
app/src-tauri/src/detectors/: custom_detector.rs  default_detector.rs
app/src-tauri/src/utils/: image_utils.rs
app/src/components/features/main/components/: local-window.tsx
app/src/components/features/main/utils/: shortcut-utils.ts  window-utils.ts
app/src/components/features/settings-general/components/: switch-card-list.tsx  switch-card.tsx
app/src/components/features/settings-general/hooks/: use-boolean-setting.ts
app/src/components/features/settings-motions/components/: delete-dialog.tsx  motion-card-list.tsx  motion-card.tsx  motion-form.tsx
app/src/components/features/settings-motions/utils/: motion-utils.ts
app/src/components/ui/: dialog.tsx  sidebar-nav.tsx
app/src/layouts/: settings-layout.tsx
app/src/pages/settings/: edit-motion.tsx  general.tsx  motions.tsx
app/src/providers/: general-settings-provider.tsx  motion-settings-provider.tsx
app/src/styles/: main.css
app/src/types/: settings.ts  window.ts
app/src/utils/: fs.ts  settings.ts
app/src/windows/main/: index.html  index.tsx
app/src/windows/settings/: index.html  index.tsx
docs/: ATTRIBUTION.md  flow.md
